letter spacing fix

--- a/css/components/intro.css
+++ b/css/components/intro.css
@@ -22,6 +22,7 @@ body {
 
 .about h6 {
     margin: 20px 0 30px 0;
+    letter-spacing: 2px;
 }
 
 .about p {
