--- a/css/components/sectionHeader.css
+++ b/css/components/sectionHeader.css
@@ -8,7 +8,6 @@ h1 {
 h6 {
     text-transform: uppercase;
     font-weight: 400;
-    letter-spacing: 2px;
     font-size: 14px;
     font-family: sans-serif;
 }
